docs: :memo: Update documentation.

--- a/documentation/bib.bib
+++ b/documentation/bib.bib
@@ -8,3 +8,10 @@ address = {USA}
 }
 
   
+@misc{Pfaff_2004, 
+url={https://benpfaff.org/papers/libavl.pdf}, 
+title={Performance analysis of bsts in system software - Ben Pfaff}, 
+author={Pfaff, Ben}, 
+year={2004},
+note = "[Online; accessed 3-December-2023]"
+} 
