docs: :memo: Update documentation to final version contentwise.

--- a/documentation/bib.bib
+++ b/documentation/bib.bib
@@ -15,3 +15,38 @@ author={Pfaff, Ben},
 year={2004},
 note = "[Online; accessed 3-December-2023]"
 } 
+
+@book{aho86,
+  added-at = {2007-03-17T15:34:03.000+0100},
+  annote = {Mentions (mostly) viable prefix property. Earlier dragon book is more clear on this. Also mentioned in Graham-Rhodes paper.},
+  author = {Aho, Alfred V. and Sethi, Ravi and Ullman, Jeffrey D.},
+  biburl = {https://www.bibsonomy.org/bibtex/2540b2a8f4a1fffbbfe439ad1b91247ac/yijunyu},
+  citeulike-article-id = {608947},
+  interhash = {069cab756cb575510f247044b597377d},
+  intrahash = {540b2a8f4a1fffbbfe439ad1b91247ac},
+  keywords = {compilation compiler},
+  priority = {0},
+  publisher = {Addison-Wesley},
+  timestamp = {2007-03-17T15:34:11.000+0100},
+  title = {{Compilers, Principles, Techniques, and Tools}},
+  year = 1986
+}
+
+
+@book{10.5555/523017,
+author = {Louden, Kenneth C.},
+title = {Compiler Construction: Principles and Practice},
+year = {1997},
+isbn = {0534939724},
+publisher = {PWS Publishing Co.},
+address = {USA},
+abstract = {From the Publisher:COMPILER CONSTRUCTION: PRINCIPLES AND PRACTICE features a comprehensive, hands-on case study project for constructing an actual, working compiler. This case study involves a relatively simple programming language that will expose readers to the basic concepts used (and potential pitfalls) in constructing larger compilers. Kenneth Louden and his colleagues at San Jose State University have successfully class-tested this approach. COMPILER CONSTRUCTION is a natural extension of Professor Louden's popular text PROGRAMMING LANGUAGES: PRINCIPLES AND PRACTICE. Professionals joining or beginning a compiler project will find COMPILER CONSTRUCTION valuable, as it provides the basic theory, necessary tools, and practical experience to design and program an actual compiler.}
+}
+
+  
+
+
+
+
+  
+
